8302777: CDS should not relocate heap if mapping fails

Reviewed-by: ccheung